Quitar los warnings que nos muestra en la consola